# ChangeLog for sci-physics/lammps
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-physics/lammps/ChangeLog,v 1.86 2015/03/23 17:30:45 nicolasbock Exp $

*lammps-20150314 (23 Mar 2015)

  23 Mar 2015; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20150314.ebuild:
  sci-physics/lammps: Adding new version.

  23 Mar 2015; Nicolas Bock <nicolasbock@gentoo.org> -lammps-20140201.ebuild,
  metadata.xml:
  sci-physics/lammps: Removing old packages.

  23 Mar 2015; Nicolas Bock <nicolasbock@gentoo.org> -lammps-20141021-r1.ebuild,
  -lammps-20141021.ebuild, -lammps-20150105.ebuild, -lammps-20150106.ebuild,
  -lammps-20150110.ebuild, -lammps-20150119.ebuild, -lammps-20150120.ebuild,
  -lammps-20150121.ebuild, -lammps-20150130.ebuild:
  sci-physics/lammps: Removing old packages.

  23 Mar 2015; Nicolas Bock <nicolasbock@gentoo.org> -lammps-20141217.ebuild,
  -lammps-20141219.ebuild, -lammps-20141222.ebuild:
  sci-physics/lammps: Remving old packages.

  23 Mar 2015; Nicolas Bock <nicolasbock@gentoo.org> -lammps-20140905.ebuild,
  -lammps-20140925.ebuild, -lammps-20141105.ebuild, -lammps-20141123.ebuild,
  -lammps-20141124.ebuild, -lammps-20141126.ebuild:
  sci-physics/lammps: Removing old packages.

  22 Mar 2015; Nicolas Bock <nicolasbock@gentoo.org> -lammps-20140614.ebuild,
  -lammps-20140711.ebuild, -lammps-20140806.ebuild, -lammps-20140808.ebuild,
  -lammps-20140815.ebuild:
  sci-physics/lammps: Removing old versions.

*lammps-20150312 (21 Mar 2015)

  21 Mar 2015; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20150312.ebuild:
  sci-physics/lammps: Adding new version.

  21 Mar 2015; Nicolas Bock <nicolasbock@gentoo.org> lammps-20150210.ebuild:
  sci-physics/lammps-20150210: Stable for amd64, rf. bug #544018.

*lammps-20150306 (21 Mar 2015)

  21 Mar 2015; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20150306.ebuild:
  sci-physics/lammps: Adding new version.

*lammps-20150305 (20 Mar 2015)
