@@ -3,19 +3,21 @@ Hash: SHA256
 
 DIST jarbundler-1.7.tar.gz 109484 SHA256 e727488efa0a990beca9343ad8050875ea459ea913aa7d54eeffc54c4a590ad2 SHA512 f3572fcf857c87fb6ff2c396f5da7502164a13e54a8adba1f9e6eece85c1a59509a3215443ca7d692992eac435bf4e962cc17f5ef64be0d0f676db563ade942a WHIRLPOOL 0a2f450980a6ccf954d75fd19b9e285054d0feb17d7913646e4875bd1273a5ed52236e3c34cab352e9168e71c7d339c6922ba73c66c2f8ecddaac3a53d6a4209
 DIST jarbundler-1.8.1.tar.gz 132101 SHA256 19f670035bfe13409dd562753b32144f4597fb56782a7baf604ec034a5f4f6a2 SHA512 f18657aaaae749846544fc35b65fe5e548a0471d85bf4e1d671bf1c7309f2392487069e880ce5f9c1a0e076637dddd9274d536969a9df5401331835f881553b4 WHIRLPOOL fb80abf779f7ebadcb331ffc785a6ae99063955b5fafbaaca1edc1fd6ee4a1730ef3ce20c312c3d6eca7827ee47d9e62dbe3a78268e11890742c2f2d165468bf
+DIST jarbundler.zip 159874 SHA256 6fb64f13d466804fa0ca0767708a0cc9cf1db1ed7904dc92afca188608ab9a6e SHA512 8b8b45533c601d10b6f986b913b824bb05617ac0901f178ee3fcfbdffa41ca060325228f71e62c4dfade778d50dd2040504eabf49311d386d75b82f77a535280 WHIRLPOOL 3676b6fabacc4054575cb5e5cf509a848d20222b28de1dad2ae0859f3b82ca070f294bb227849a3bb9a6a7662af45442a2fcb1502450a2cc7fe36c0e8be20245
 EBUILD jarbundler-1.7.ebuild 775 SHA256 529b13b77be18b168738cec39148b862abeb69c117d5f9e3d26217bd209f36e1 SHA512 1f999266673b41e52f3942367fc8c8161420b1a960b5ed688c377f033f4b82258a58c26fa04ee4207946a7258ba19debd53b780ecd3449d9669535eff6215bb1 WHIRLPOOL 06e11bb3f544e99e09e3633ba1c2fa21a732c412e3ea1fa76b1f2b1a24985f39c777ead2c78e5942289549e77d8010f5d51ec446537d6d9fd13552dff77567f5
 EBUILD jarbundler-1.8.1-r1.ebuild 986 SHA256 b6f1243403dad47cc7fde91ff79a897ba83aba23a77073047dbdbc52e2abbc76 SHA512 69d2f395c405574eb06f0ccdd41dc507ff7beba235ffdf7baa890d18e1b7d6531af35d21ec36c8160e5b55881f491ba9b8049371aae0315b0fbff0070bb982c1 WHIRLPOOL 38677d65e625eef12c26dd34039af44c14f8b7ef95f25e8ca50340bff43442c39d61eaf2330ca9582cab603640a7abb899b57fa466a26af4ed076b47a87c505c
 EBUILD jarbundler-1.8.1-r2.ebuild 998 SHA256 a50619faa10207c721792f2da96c19caed16cb9bc67770c26f298b11eedfc1c3 SHA512 dbf3851d768a9f1f18d7f5d2bf41a7b0ed14e41c02c7afa53b277e3b66b6faa6a291112b52c51f2821bfb1da9a0b266242d164072e4948c62d8ece282a9793b3 WHIRLPOOL 43ea7710f81370a8b7e9ed51bd6e75c70f7c7285675c4e5de70c56751b2a39482e2a49bebcee2e8381c5819e2816ce9fa5aa8f17f2a007297c4fdc2381cc7d77
-MISC ChangeLog 2503 SHA256 8d199b3c2e9372a46848f44eafbb8b9a8e6a8564ad0116cb7b968d1c51d25d40 SHA512 c47f9e5ef1dc4f997347a29749ce8bef2756f9f20bb74ae1c5fc4dda5252b28bbb490cd53072366c99a134a67765c0fe1ca01b26aa398efe4796455bb0e18847 WHIRLPOOL 9d699448ae1aa7c448a5e3cb9d76fc5660ebe20b9e6febc11e79f582c4c1755c32530a0779f4aad9ef8e3ef7b6e94c22a34a1a44388d2fec5dcbb9a11a9e215c
+EBUILD jarbundler-2.3.1.ebuild 1041 SHA256 4f30e333d6211216544aea82cf1a018398c68cdb47acb7870a207f855fe2a52c SHA512 be13fb9f80d95147624834ce5665e8adfc396277f2c65e86d78d28133709f3573d3d771ea8b97484ba15a845d1830a840d965d60fadd278ad026a9e61ab685f3 WHIRLPOOL 19f4c38b1602b749b3051f0f02814dea863e8fdd5f4884a9b8c972ce0c82ea2678b0f1fc4101d94df68c04ca7d1d98cbca818fe75f29a4557a143c8cbf64e337
+MISC ChangeLog 2653 SHA256 419b241c0526ef5811cee5d76d8dafd109da6eb4c15fb93d85235758ed9eb069 SHA512 fe72d73aeaf7c787f4b595f50f20d11e251e15307c0cfd777d13d62f31ac170d647b6e335688e068e06b854a82e5c2be4031859e9b4d450238bf039bffaec39d WHIRLPOOL 38fd3d1b5b3ffec36d002c537f5a5ee705d957aba99dc6cd32c1620b2f7ecc9e617a4abf38ca49f3938dd33c11d13d670306e6ee1f8bdf9f7a8faf2b92adc0c7
 MISC metadata.xml 159 SHA256 1c070a909e96d9d193f84ad9304d196febbe33b60a724cc4b0d20634bb82255b SHA512 269cf19c37f2d136b926f546ec83ffdbc1374b2b6e26f8a31f21854143380386c31bfc7b2a0b9c47fb1f7c02607ddbdd43e517cb5c3270515e465c4dd7788843 WHIRLPOOL afb402fec04cddb3184b69eb8a8d36b404edd2870fd06c8f5e99be39c341ea6fa7542e0b680fac05529522ed33838e8279381d7a6de9dbc58fe55841229d8a51
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJT3lGwAAoJELjwI6Q8XPda2pQH/RuQbly9JEDWukROuLFzbwdo
-f2h7bfOGfITsSwGb2CVnOvdAxaUyr2uL3Hpr1tW+cN26XRoX1IvTZ9BMqb4cP+Pk
-U/G4ownAXtzNixSXgzmhj+UgPvRHXcoYYOaxdBgzRT0UVDJPa9JDC5YMciWsj50H
-nAFBRiU7PWxew37nCPaPtzimr0HKlhCfAN4XbNFIfNdJWv7zwdjcC4vO0i/Sqr+0
-QEarefVggwOybpMvYQXtjqCN1/VvXStqDfF/W8eFeD6WQRMmuuUnunJIVvT1NVsp
-V3edOuzBdt74Njvz1gU7X6Sc88pX7o/69gmqI65yhxZWvjImXir2MOynA/AQGS0=
-=x8ad
+iQEcBAEBCAAGBQJVEGNlAAoJEJGRpfGTSRu4ffwH/1lN4u5Dpcm4m64kxuqgyA+P
+BfT+uopijDEBjKamE8cI+we4BznzNkcVLon2640jgELsqOQRy9pBn7ADd/8KLelk
+P9tiBufkFYyelES1El9ELi38jw+bD5L5nqnuvwSNy5VJkT8zf/xUlO3vr7dO/tC2
+PonfGCeMZh/7at7hVjiN55GwnEcWsCFGN8J6jc+aW2/FAzxq2573LmJDJDhJBE+t
+wR8nkABN5xIGXS2faHxIL1hfrTqWkP3RvkD3/6w3s07Jt8pdUoSLF5Phm8srdL3V
+PAKdZvh8OBTBNKosb56n12PSxbhMNBt8MuucrpnBnIzf8F4b88hgfYqVpKVXRak=
+=5+/N
 -----END PGP SIGNATURE-----
