@@ -4,6 +4,7 @@ DIST lammps-12Mar15.tar.gz 63521532 SHA256 048dc4d5f9f4d26d6f9bfeb4e20bb48cd01d3
 DIST lammps-13Feb15.tar.gz 62974524 SHA256 6be39873ff30eaaf467ac201d7f9b06b7fb175c5fcc4687dc38b7e8ab8ac0544 SHA512 20a0e7ba4905cf3e1f57df9bb9ddba298c8ee03e823d920ffa526a6ee318e4c9a5d3319bd79a46441a895c5b03ba0d296a2921f38f5795014f544ec58b3be629 WHIRLPOOL 22e9534dc84a9ce5cc2f5ca0ff693a05cc8afa1f307cac71d739c7504e56a11121acda62cc1d141f2e8f556a4c35bddeeac09cd429cddde531dec115925f4b00
 DIST lammps-14Mar15.tar.gz 63563980 SHA256 10dba8d347a7ab7a5ba3e4a87f555177cb0ad5cbf4bcee4125cca5e67cb31dfa SHA512 99dd8fece0ec220f324a0c9dc14b80260119c1038afd4312ad85d6672a65164a6cee6625677f8ef337962677b82d4a0c7b2ca361d004dfd9fb0083c5b7eb1737 WHIRLPOOL 1fc20a1d388d575c3313a65d601b2f099464767c1585f601a961269317fcb320bb9b8dda7a7e4122808d8234d120300a379ba4d119c32d2dcc9ad0e5616893b2
 DIST lammps-16Feb15.tar.gz 62981941 SHA256 deaac4218a1f016fcd49bf3cf01e26c32ffcecb89d6b61636192baf6f5980392 SHA512 ed4e3270d94d1f4d2ae75728913eaf9fc501cb5512c7ee2f9a2a3ec6369c5d86aa5ca9dba625c961908bdca954b85aa37b6a0b8e5cee67e5cdf1a74b635ff394 WHIRLPOOL 4f8197361be45fa6928d89e8e3d623ed048102aaa1bee3af4c9b53d3baad86e07a78344806955a86094bbd35ec01103c8303f835bf062b36e97cb0f883ae836e
+DIST lammps-18Mar15.tar.gz 63598942 SHA256 6f76b8840af1581c03c8fd4065116d73d0f68264acf8b88ecab785e851b5a7ec SHA512 99d52891985f1bdaa0fea219057a6b76396b1ea61af62d06be6aecfd007e88eff91905df22cbb7255f5c43a2a62a4224c2daf73f3c8a18ba306f960fb2073c64 WHIRLPOOL a1668ae422aa1ac67ff8572b1b096f38b0eeb6a271ad20710ef82b2e4dd46db6538a5080deb4cfa05992033872f157a0dd53193216baf220565ab9167dcc0c8b
 DIST lammps-19Feb15.tar.gz 63160551 SHA256 970ea081e424f631c56a93e0bbd8cf37b67f8b3d707b0c6a84e5d942100a3848 SHA512 f8947dce3143ba3bfaa20e71cde35e519f0074c2654c71037cff5e1b1fc68214431e92529235d8ca61d65c4f1c70945df76b6a97f4e291bd9fe15bbb477112f5 WHIRLPOOL 7bc761796bdad741a5f82416262ace5c45a71b2c765f975586d970e7584c43ac0488051381cf6860491af4b0d702ba1223872825af10365635b2c40785a55591
 DIST lammps-1Feb15.tar.gz 62801871 SHA256 4bae0a1bb8e56db0e657e5df068fd7caf62117624227d82400e39a5e171280d6 SHA512 85b59dfe5f24d30625171711555cc95587f2944ff6bba1914c223dfd422975319e8725a45b9bd2743fbf2e770d3af7ef26dc4b283c1514c429c67e9cab9d6eeb WHIRLPOOL ed1e5626314540e0ee6df0c537af93e5b81a00ee9994a6ccaa9a9ff852d9eefb34d5d5918faf4f605d95beb5758ec46c27a8aea3345392e85c9eb1198380b2ec
 DIST lammps-24Feb15.tar.gz 63487709 SHA256 f8a42d4fcd3c3b6591898cddee2fae6f29ecfd11bf688b2ae81896360181bdef SHA512 42777481fd6551fc14010c256bcd5665a42b52e79026860eca89724edb50df9e4af6566553e51954cf0c9099e4cc9c982e07cb4a99ec31e07fdb225ee5e7e219 WHIRLPOOL 140566ede55929e528c91da1903bda7667028183bf1d4294c441f98877675af206d66fa476167469f5e1f83aee969635a53c6a56d7eac3eb6d646cf5400d6472
@@ -33,5 +34,6 @@ EBUILD lammps-20150305.ebuild 5129 SHA256 7807125784a48075648cfb58ed28dbaca2eb17
 EBUILD lammps-20150306.ebuild 5179 SHA256 f828047af1693586ddbd41a395bcaf9c27ce080e4efba9077f1054adeda7ba16 SHA512 367d0269af4b293f68470ef164c91419836ef49203617d8f5b6fecc80c850d0208b14151cea78db03ac157dfab20b641acf98875cf3feaa1fca58644938bd0b9 WHIRLPOOL d5dd08f6e5be9d6b19c2adc69561ef49f92b70698092103c9940bbb383fdad741a223fa9111983d8a8029ba4e0f6459c02c6ac94c4e9800b3fab460fa2bb8f44
 EBUILD lammps-20150312.ebuild 5082 SHA256 ecb723ccda7e15bb6eaccf1dec08e94efb363c6b41eca548ded1045eded6870d SHA512 8fb321ab448d94894c95cd1f7ee7948718522b044820e5cb1cbe31f640e9ea7a439f61cc5fa1b1757732c135c7b763d240d3cf35937843a94691c8e70aa42c79 WHIRLPOOL 634b04b5d56cf979e8f96be491a31185b0593cb87e2f1229f2427c7fd3d127589a0ea6a531bdee5dcf34e154684a2fdc355d3fd50640651c9eaf10bf059b14dd
 EBUILD lammps-20150314.ebuild 5082 SHA256 938cbfeab4bb3e6bd198df79eb358e3e52992d3e5ff8c348deb446ef1f414e51 SHA512 fe8183f44a1f4790a77bc4e1692b943841166d3161018d2987103ca61229237c97e0d04bbf1ed728d19883736257e20e3b08daa1af147d17378b0100a1fe049c WHIRLPOOL 6fddbe1bf5b3f4e649d1edee3097cc2d9a907a787700b29ed23549c34aa4a27bd4dd99eeebc7a22d3f42d933f161e95f7affdae7d4674b3b5a544463322ba04c
-MISC ChangeLog 14764 SHA256 961da8bea7eac96ed6f179f7d8c73d5836593a0063dd6780194835971707c49d SHA512 984fa0187d4f31c77afe27c09ca71375469e7a083dd97caee2f0b28b0540ffae9e587ac3a29deb5e154f7a7ebf5cfc9fd36438ee5e91fa20e2e3d22d62696ef5 WHIRLPOOL 83a0037eab11cd1794552cd53cef2893d2dbddd309067065d710244c573122acb99b55b810d42120007408b0ec91c10701dca9f898fb59d7f7931a7e06a5a070
+EBUILD lammps-20150318.ebuild 5232 SHA256 1acae503e112f81106dd3dd1f34444ce16df2d5f3be82bb51b6a191f77b180d6 SHA512 ed671dca82ef845981134e9ae901474b97cb9746a5250de0a122d4d10eb5048ff46b55028acd1c3c638ac389a26d280c64ee6f7d5c6257cfa913839c403a7ad1 WHIRLPOOL 896a4c719303ed4b7013838ff2218fdd8cdd5af9c3b07d44f6d8616061ccab86cecd753c3c6b332a27c4cba2607a1d935b7e4a8add20e066e717f1f09b81bd82
+MISC ChangeLog 14917 SHA256 e40dc2d2a90f5d817f2e52a098eef2eb75ea2852c374ecd2bb09439bb78b1965 SHA512 e0787d58d57edeb6a9472e1f3f659a43095bba766b053a428deab92c096bf056078b34ffc482a625edf34f597d181949cd3b6aa8d0790fcbd2497bcb78ed1bf2 WHIRLPOOL 442325e78462c14c8c0a2e35cfe926092ee7abb824fa52de64d256f8d8e5d75e532c4b533b3a04b2a70b61232d3e942f36c66e6614062804bb25d8feb4783b75
 MISC metadata.xml 1104 SHA256 cd019e3b907b935374e9818167b4a9c406d938cf132b6656a7aed15fb8070d4c SHA512 9fa9919de32eb24c720fecbb449112b997e331b4ecb37aba8cdfcf90bc832e00ff8deef570f8eb92341f8c82b90787d65befa9ebeacb904abb467b8f3e1c5054 WHIRLPOOL 88fbd760afe74c12310ed3417e8c6d242b282bc78fee612b1c0c1dd1532ec9253f7b5134a9fb8f463f9fe469ce1d5fada43b97b348c221c84869907cfc0dd37e
