@@ -1,6 +1,11 @@
 # ChangeLog for sci-physics/lammps
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/lammps/ChangeLog,v 1.86 2015/03/23 17:30:45 nicolasbock Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/lammps/ChangeLog,v 1.87 2015/03/23 19:06:04 nicolasbock Exp $
+
+*lammps-20150318 (23 Mar 2015)
+
+  23 Mar 2015; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20150318.ebuild:
+  sci-physics/lammps: Adding new version.
 
 *lammps-20150314 (23 Mar 2015)
 
